<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame"
    android:padding="32dp">

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isbn"
        android:inputType="number" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autor"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_editorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editorial" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/generos" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/edit_paginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_paginas"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_cancelar"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar" />

        <Button
            android:id="@+id/btn_agregar_producto"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/btn_agregar" />
    </LinearLayout>
</LinearLayout>